[metadata]
name = rt_stoppers_contrib
version = 1.0.1
description = Additional stoppers for ray tune
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klieret/ray-tune-stoppers-contrib
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker =   https://github.com/klieret/ray-tune-stoppers-contrib/issues
    Documentation = https://rt_stoppers_contrib.readthedocs.io/
    Source Code =   https://github.com/klieret/ray-tune-stoppers-contrib
python_requires = >=3.7

[options]
packages = find:
install_requires =
    ray[tune]
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-coverage
